objects/Lot_Prefix__c.object
<CustomObject>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <formula>Account__r.Short_Name__c</formula>
        <label>Account Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lot Prefixes</relationshipLabel>
        <relationshipName>Lot_Prefixes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_By_HCM_Login_ID__c</fullName>
        <formula>CreatedBy.HCM_Login_ID__c</formula>
        <label>Created By HCM Login ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <label>Fab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>FAB 9</fullName>
                </value>
                <value>
                    <fullName>FAB 11</fullName>
                </value>
                <value>
                    <fullName>ALTIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Sync_to_Martinistore_Status__c</fullName>
        <label>Last Sync to Martinistore Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LotPrefix_Sync__c</fullName>
        <label>LotPrefix_Sync</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Prefix_Key__c</fullName>
        <label>Lot Prefix Key</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Martinistore_Sync_Status__c</fullName>
        <label>Martinistore Sync Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_By_HCM_Login_ID__c</fullName>
        <formula>LastModifiedBy.HCM_Login_ID__c</formula>
        <label>Modified By HCM Login ID</label>
        <type>Text</type>
    </fields>
    <label>Lot Prefix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Short_Name__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Fab__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Lot Prefix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lot Prefixes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lot_Prefix_validation</fullName>
        <active>true</active>
        <description>Lot prefix name should not contain &apos;O&apos; or &apos;0&apos;</description>
        <errorConditionFormula>OR(CONTAINS(Name,&apos;0&apos;),CONTAINS(Name,&apos;o&apos;),CONTAINS(Name,&apos;O&apos;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Lot Prefix should not contain &apos;0&apos; or &apos;o&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Lot_Prefix_Name</fullName>
        <active>true</active>
        <description>Imposes a 5 character limit to Lot Prefix Name.</description>
        <errorConditionFormula>LEN(Name) &gt; 5</errorConditionFormula>
        <errorMessage>Lot Prefix Name can only have up to five (5) characters.</errorMessage>
    </validationRules>
</CustomObject>